# tinyrenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: constant.h  constants.h  geometry.h  matrix.h  model.h  my_gl.h  random-mt.h  tgaimage.h  timer.h  vector.h
src/: main.cpp  model.cpp  my_gl.cpp  tgaimage.cpp
